<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="fh_mod_version">FireHound Version</string>
    <string name="fh_settings_title">FireHound Ashes</string>
    <string name="fh_section_title">Burnt Extras</string>
    <string name="fh_title">Fire Scars</string>
    <string name="reset">Reset</string>
    <string name="fh_developer_title">Developers Github</string>
    <string name="fh_developer_summary">Support the Developer and FireHound Team</string>
    <string name="maintainers_fh_title">FireHound Official Maintainers</string>
    <string name="about_developer">About Developer</string>
    <string name="fh_git_title">Github Source</string>
    <string name="fh_git_summary">Compile FireHound for your Device</string>
    <string name="fh_google_plus_title">FireHound Google Plus Community</string>
    <string name="fh_google_plus_summary">Visit and Join Community for More Information</string>
    <string name="about_fh">About FireHound</string>
    <string name="fh_donation_title">Buy us a Coffee</string>
    <string name="fh_donation_summary">Donations are welcome and will be used to keep our build servers alive</string>
    <string name="fh_maintainers_title">Official Maintainers</string>
    <string name="fh_maintainers_summary">Official Device Maintainers and Officially Supported Devices</string>
    <string name="fh_website_title">FireHound Website</string>
    <string name="fh_website_summary">Visit for more info</string>
    <string name="fh_gerrit_title">FireHound Gerrit</string>
    <string name="fh_gerrit_summary">Every single contribution is welcome on our Gerrit</string>
    <string name="share_fh_title">Share FireHound</string>
    <string name="share_fh_summary">Pour some fuel and spread Fire</string>
    <string name="share_message">FireHound is Custom ROM developed focusing on stability and features! Go go go, flash FireHound and change the way you use your smartphone! For more information, join our community: @ https://plus.google.com/communities/114615598909452601377</string>
    <string name="share_chooser_title">Share FireHound</string>
    <string name="maintainers">Official FireHound Maintainers</string>
    <string name="yureka">YU YUREKA (tomato)</string>
    <string name="yureka_summary">Rakesh Batra</string>
    <string name="yuphoria">YU YUPHORIA (lettuce)</string>
    <string name="yuphoria_summary">Pranay Narang</string>
    <string name="yunique">YU YUNIQUE (jalebi)</string>
    <string name="yunique_summary">Shubhojit Nag</string>
    <string name="op1">One Plus One (bacon)</string>
    <string name="op1_summary">PrathameshMS</string>
    <string name="op2">One Plus Two (oneplus2)</string>
    <string name="op2_summary">Bilal (oldswag)</string>
    <string name="op3">One Plus Three (oneplus3)</string>
    <string name="op3_summary">PrathameshMS</string>
    <string name="note3">Redmi Note 3 (kenzo)</string>
    <string name="note3_summary">Manhar Gupta</string>
    <string name="dior">Redmi Note 4g (dior)</string>
    <string name="dior_summary">Luy Nagda (Devil2709)</string>
    <string name="fortuna3g">Samsung Galaxy Grand (fortuna3g)</string>
    <string name="fortuna3g_summary">Siddhant Satam</string>
    <string name="note2">Samsung Note 2 (note2)</string>
    <string name="note2_summary">Sagar Shah</string>
    <string name="victara">Mote G (victara)</string>
    <string name="victara_summary">Anderson Mendes</string>
    <string name="merlin">Moto G (merlin)</string>
    <string name="merlin_summary">DerkLord</string>
    <string name="g3">LG G3 (D855)</string>
    <string name="g3_summary">Rafael Marchetto</string>
    <string name="titan">Moto G (titan)</string>
    <string name="titan_summary">Kranoner</string>
    <string name="condor">Moto E (condor)</string>
    <string name="condor_summary">Shubhojit</string>
    <string name="potter">Moto G5 Plus</string>
    <string name="potter_summary">Garv Maggu</string>
    <string name="athene">Moto G4 Plus</string>
    <string name="athene_summary">Rajat Gupta (tywinlannister7)</string>
    <string name="yu">YU</string>
    <string name="oneplus">OnePlus</string>
    <string name="redmi">Xiaomi</string>
    <string name="samsung">Samsung</string>
    <string name="moto">Moto</string>
    <string name="lg">LG</string>
    <string name="lenovo">Lenovo</string>
    <string name="lenovo_k4">Lenovo Vibe K4 Note</string>
    <string name="lenovo_k4_summary">Mohan Cm</string>
    <string name="lenovo_k3_note">Lenovo K3 Note</string>
    <string name="lenovo_k3_note_summary">Sandeep Sethi(adev79)</string>
    <string name="coolpad">Coolpad</string>
    <string name="coolpad_note3">Coolpad Note 3</string>
    <string name="coolpad_note3_summary">Mohan CM</string>
    <string name="coolpad_note3_lite">Coolpad Note 3 Lite</string>
    <string name="coolpad_note3_lite_summary">Sabyasachi Sarkar(MakeMeCool) , Sam Grande(ReaperGod)</string>
    <string name="note4">Redmi Note 4 (mido)</string>
    <string name="note4_summary">Sabyasachi Sarkar(MakeMeCool)</string>
    <string name="fh_online">About Us</string>
    <string name="status_bar_title">Status Bar</string>
    <string name="qs_title">Quick Settings</string>
    <string name="notification_title">Notifications</string>
    <string name="lockscreen_title">Lock Screen</string>
    <string name="recents_settings">Recents</string>
    <string name="button_title">Hardware Buttons</string>
    <string name="navbar_title">Navigation Bar</string>
    <string name="display_title">UI / UX</string>
    <string name="sound_title">Sounds</string>
    <string name="animation_settings">Animations</string>
    <string name="misc_title">Miscellaneous</string>
    <string name="back_soon_title">Hey there</string>
    <string name="back_soon_summary">We will be back soon with all the features! Till then chill ya!!!</string>
    <string name="lockscreen_gestures">Lockscreen Gestures</string>
    <string name="lockscreen_ui">Lockscreen UI / UX</string>
    <string name="ui">UI</string>
    <string name="ux">UX</string>
    <string name="lockscreen_misc">Miscellaneous Settings</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="double_tap_to_sleep_lockscreen_title">Double tap to sleep on lockscreen</string>
    <string name="double_tap_to_sleep_lockscreen_summary">Double tap on the top third or bottom shortcut area of the lock screen to put the device to sleep</string>
    <string name="lockscreen_tuner_title">Lockscreen Tuner</string>
    <string name="tuner">Tuner</string>
    <string name="statusbar_items_category">Statusbar Tuner</string>
    <string name="traffic_title">Network Traffic indicators</string>
    <string name="traffic_summary">Control network traffic indicators</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="network_traffic_type">Select net activity type</string>
    <string name="show_network_traffic_up">Uplink</string>
    <string name="pulldown_title">Statusbar Pulldown</string>
    <string name="quick_pulldown_title">Quick pulldown</string>
    <string name="smart_pulldown_title">Smart pulldown</string>
    <string name="app_ops_category">App Ops</string>
    <string name="screenshot_sound_title">Screenshot sound</string>
    <string name="screenshot_sound_summary">Enable beep sound when screenshot is taken</string>
    <string name="sound_misc">Miscellaneous</string>
    <string name="volume_rocker_music_controls_title">Playback control</string>
    <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
    <string name="swap_volume_buttons">Swap volume buttons</string>
    <string name="swap_volume_buttons_summary">Swap volume buttons based on device rotation</string>
    <string name="volume_buttons_category">Volume Buttons</string>
    <string name="qs_misc_title">Miscellaneous</string>
    <string name="media_scanner_on_boot_title">MediaScanner behavior on boot</string>
    <string name="incall_vibration_category">In-call vibration options</string>
    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
    <string name="navbar_tuner_title">Navbar Tuner</string>
    <string name="wakelock_blocker_title">Wakelock Blocker</string>
    <string name="alarm_blocker">Alarm blocker</string>
    <string name="alarm_blocker_summary">Block alarms while screen off</string>
    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
    <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
    <string name="dui_title">Navigation bar</string>
    <string name="dui_summary">SmartBar, Fling and Pulse</string>
    <string name="lockscreen_qs_disabled_title">Disable quick settings on lockscreen</string>
    <string name="lockscreen_qs_disabled_summary">Disable quick settings tiles on secured lockscreen</string>
    <string name="toast_icon_title">Toast app icon</string>
    <string name="toast_icon_summary">Display the app\'s icon corresponding with the toast</string>
    <string name="allow_signature_fake">Allow signature spoofing</string>
    <string name="allow_signature_fake_summary">Allow apps to bypass security systems by pretending to be a different app</string>
    <string name="app_ops_summary">App Ops Privacy</string>
    <string name="wakelock_blocker_sumary">Block various wakelocks</string>
    <string name="navbar_tuner_summary">Customize navigation bar</string>
    <string name="volume_dialog_force_expanded_title">Force Expanded Volume Panel</string>
    <string name="volume_dialog_force_expanded_summary">Force the volume panel to always appear in expanded mode</string>
    <string name="advanced_reboot_title">Advanced restart</string>
    <string name="advanced_reboot_summary">When unlocked, include options in the power menu for restarting into recovery or bootloader</string>
    <string name="power_menu_screenshot_title">Screenshot</string>
    <string name="power_menu_airplane_title">Airplane mode</string>
    <string name="power_menu_users_title">User switcher</string>
    <string name="power_button_title">Power Button</string>
    <string name="qs_tile_title_visibility_title">QS tile titles</string>
    <string name="qs_tile_title_visibility_summary">Show quick settings tiles titles</string>
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_summary">Show a brightness slider in the quick settings panel</string>
    <string name="brightness_icon_title">Auto brightness</string>
    <string name="brightness_icon_summary">Show toggle for adaptive brightness near the slider</string>
    <string name="dashboard_conditions_title">Dashboard conditions</string>
    <string name="summary_dashboard_conditions_enabled">Dashboard conditions are enabled</string>
    <string name="summary_dashboard_conditions_disabled">Dashboard conditions are disabled</string>
    <string name="dashboard_suggestions_title">Dashboard suggestions</string>
    <string name="summary_dashboard_suggestions_enabled">Dashboard suggestions are enabled</string>
    <string name="summary_dashboard_suggestions_disabled">Dashboard suggestions are disabled</string>
</resources>