<?xml version="1.0" encoding="UTF-8"?>
<!--
     Copyright (C) 2017 FireHound ROMs
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
                  android:title="@string/qs_misc_title"
                  xmlns:lineage="http://schemas.android.com/apk/res/lineageos.platform">

    <!-- Vibrate tiles -->
    <com.fh.settings.preferences.SystemSettingSwitchPreference
        android:key="quick_settings_vibrate"
        android:title="@string/quick_settings_vibrate_title"
        android:summary="@string/quick_settings_vibrate_summary"
        android:defaultValue="false" />

    <!-- Disable qs on lockscreen -->
    <com.fh.settings.preferences.SecureSettingSwitchPreference
        android:key="lockscreen_qs_disabled"
        android:title="@string/lockscreen_qs_disabled_title"
        android:summary="@string/lockscreen_qs_disabled_summary"
        android:defaultValue="false" />

    <lineageos.preference.LineageSecureSettingSwitchPreference
        android:key="qs_show_brightness_slider"
        android:title="@string/qs_brightness_slider_title"
        android:summary="@string/qs_brightness_slider_summary"
        android:defaultValue="true" />

    <lineageos.preference.LineageSecureSettingSwitchPreference
        android:key="qs_show_auto_brightness"
        android:title="@string/brightness_icon_title"
        android:summary="@string/brightness_icon_summary"
        android:dependency="qs_show_brightness_slider"
        lineage:requiresConfig="@*android:bool/config_automatic_brightness_available"
        android:defaultValue="true" />

    <!-- QS titles visibility -->
    <com.fh.settings.preferences.SystemSettingSwitchPreference
        android:key="qs_tile_title_visibility"
        android:title="@string/qs_tile_title_visibility_title"
        android:summary="@string/qs_tile_title_visibility_summary"
        android:defaultValue="true" />

</PreferenceScreen>
