<?xml version="1.0" encoding="UTF-8"?>
<!--
     Copyright (C) 2018 FireHound
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
                  android:title="@string/display_title">

    <!-- Toast icon switch -->
    <com.fh.settings.preferences.SystemSettingSwitchPreference
        android:key="toast_icon"
        android:title="@string/toast_icon_title"
        android:summary="@string/toast_icon_summary"
        android:defaultValue="true" />

    <!-- Disable dashboard conditions -->
    <com.fh.settings.preferences.SystemSettingSwitchPreference
        android:key="enable_conditions"
        android:title="@string/dashboard_conditions_title"
        android:summaryOn="@string/summary_dashboard_conditions_enabled"
        android:summaryOff="@string/summary_dashboard_conditions_disabled"
        android:defaultValue="true" />

    <!-- Disable dashboard suggestions -->
    <com.fh.settings.preferences.SystemSettingSwitchPreference
        android:key="enable_suggestions"
        android:title="@string/dashboard_suggestions_title"
        android:summaryOn="@string/summary_dashboard_suggestions_enabled"
        android:summaryOff="@string/summary_dashboard_suggestions_disabled"
        android:defaultValue="true" />

</PreferenceScreen>
