<?xml version="1.0" encoding="UTF-8"?>
<!--
     Copyright (C) 2018 FireHound
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
                  android:title="@string/sound_title">

    <!-- Misc sound settings -->
    <PreferenceCategory
            android:key="sound_misc_settings"
            android:title="@string/sound_misc">

    <!-- Screenshot sound -->
        <com.fh.settings.preferences.SystemSettingSwitchPreference
            android:key="screenshot_sound"
            android:title="@string/screenshot_sound_title"
            android:summary="@string/screenshot_sound_summary"
            android:defaultValue="true" />

    <!-- Force expanded mode -->
	<com.fh.settings.preferences.SystemSettingSwitchPreference
            android:key="volume_dialog_force_expanded"
            android:title="@string/volume_dialog_force_expanded_title"
            android:summary="@string/volume_dialog_force_expanded_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <!-- Incall vibrations -->
    <PreferenceCategory
        android:key="incall_vib_options"
        android:title="@string/incall_vibration_category" >

        <com.fh.settings.preferences.SystemSettingSwitchPreference
            android:key="vibrate_on_connect"
            android:title="@string/incall_vibrate_connect_title"
            android:defaultValue="false" />

       <com.fh.settings.preferences.SystemSettingSwitchPreference
            android:key="vibrate_on_callwaiting"
            android:title="@string/incall_vibrate_call_wait_title"
            android:defaultValue="false" />

       <com.fh.settings.preferences.SystemSettingSwitchPreference
            android:key="vibrate_on_disconnect"
            android:title="@string/incall_vibrate_disconnect_title"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
