<?xml version="1.0" encoding="UTF-8"?>
<!--
      Copyright (C) 2016 FireHound ROMs
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
                  android:title="@string/misc_title">

        <!-- App OPS Main fragment -->
        <Preference
            android:key="app_ops"
            android:fragment="com.android.settings.applications.AppOpsSummary"
            android:icon="@drawable/ic_settings_appops"
            android:title="@string/app_ops_category"
            android:summary="@string/app_ops_summary" />

        <!-- Wakelock blocker -->
        <Preference
             android:key="wakelock_blocker"
             android:icon="@drawable/ic_wakelock_fh"
             android:fragment="com.fh.settings.fragments.misc.WakeLockBlocker"
             android:title="@string/wakelock_blocker_title"
             android:summary="@string/wakelock_blocker_sumary" />

        <!-- Alarm blocker -->
        <Preference
             android:id="@+id/alarm_blocker"
             android:icon="@drawable/ic_alarm_fh"
             android:fragment="com.fh.settings.fragments.misc.AlarmBlocker"
             android:title="@string/alarm_blocker"
             android:summary="@string/alarm_blocker_summary" />

        <!-- Misc shitz -->
        <PreferenceCategory
            android:key="misc_settings_category"
            android:title="@string/misc_title">

        <!-- MediaScanner behavior on boot -->
        <ListPreference
            android:key="media_scanner_on_boot"
            android:icon="@drawable/ic_movie"
            android:title="@string/media_scanner_on_boot_title"
            android:entries="@array/media_scanner_on_boot_entries"
            android:entryValues="@array/media_scanner_on_boot_values" />

        <!-- Signature spoofing -->
        <com.fh.settings.preferences.SecureSettingSwitchPreference
            android:key="allow_signature_fake"
            android:title="@string/allow_signature_fake"
            android:summary="@string/allow_signature_fake_summary"/>

        </PreferenceCategory>

</PreferenceScreen>
