<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2018 FireHound
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/power_button_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    xmlns:lineage="http://schemas.android.com/apk/res/lineageos.platform">

    <!-- Advanced reboot -->
    <lineageos.preference.LineageSecureSettingSwitchPreference
        android:key="advanced_reboot"
        android:icon="@drawable/ic_restart"
        android:title="@string/advanced_reboot_title"
        android:summary="@string/advanced_reboot_summary"
        android:defaultValue="true" />

    <!-- Screenshot -->
    <CheckBoxPreference
        android:key="screenshot"
        android:title="@string/power_menu_screenshot_title"
        android:defaultValue="false" />

    <!-- Airplane -->
    <CheckBoxPreference
        android:key="airplane"
        android:title="@string/power_menu_airplane_title"
        android:defaultValue="false" />

    <!-- Users -->
    <CheckBoxPreference
        android:key="users"
        android:title="@string/power_menu_users_title"
        android:defaultValue="false" />

    <!-- Screenrecord
    <com.fh.settings.preferences.SystemSettingSwitchPreference
        android:key="powermenu_screenrecord"
        android:title="@string/powermenu_screenrecord"
        android:defaultValue="false" /> -->

     <!-- Torch
     <SwitchPreference
        android:key="powermenu_torch"
        android:title="@string/powermenu_torch"
        android:persistent="false" />  -->

</PreferenceScreen>
