<?xml version="1.0" encoding="UTF-8"?>
<!--
      Copyright (C) 2016 FireHound ROMs
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
                  android:title="@string/sound_title">

        <!-- Back Soon -->
        <Preference
            android:key="back_soon"
            android:title="@string/back_soon_title"
            android:icon="@drawable/ic_settings_about"
            android:summary="@string/back_soon_summary" />

</PreferenceScreen>
